finished (working) middle of linked list "recipe"

--- a/recipes/MiddleOfLinkedList.html
+++ b/recipes/MiddleOfLinkedList.html
@@ -5,6 +5,16 @@
     </head>
     <body>
         <h1>Middle Of Linked List Recipe</h1>
+        <img src="linkedlist.jpeg" alt="linkedlist"/>
+        <h3>Description</h3>
+        <p>given head of a linked list return the middle of the linked list. Delicious!</p>
+        <h4>Ingrediets</h4>
+        <ul><li>fast and slow pointers</li>
+            <li>while loop</li></ul>
+        <h4>Steps</h4>
+        <ol><li>intialize fast and slow pointers</li>
+            <li>loop through nodes linked list</li>
+            <li>return slow node</li></ol>
         
     </body>
 </html>
