finished working recipe pages

--- a/recipes/Coffee.html
+++ b/recipes/Coffee.html
@@ -6,6 +6,23 @@
     </head>
     <body>
         <h1>Coffee Recipe</h1>
+        <img src="coffee.jpg" alt="coffee station img"/>
+        <h3>Description</h3>
+        <h4>Ingredients</h4>
+        <ul>
+            <li>1 tbsp Nestle sweetened condensed milk</li>
+            <li>3/4 tbsp Instant Coffee</li>
+            <li>1 tbsp Coffee Mate</li>
+            <li>1/2 cup of water</li>
+        </ul>
+        <h4>Steps</h4>
+        <ol>
+            <li>Pour the condensed milk into your cup (it should kinda barely cover the entire bottom of your cup)</li>
+            <li>Bring 1/2 cup of water to a boil</li>
+            <li>Add the coffee and coffee mate to your cup</li>
+            <li>Pour a bit of water. Just enough enough to dissolve the stuff in the cup</li>
+            <li>Pour boiling water in the cup.</li>
+        </ol>
         
     </body>
 </html>
